--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>FAM bot.com</title>
+<title>FAM Bot.com</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -91,18 +91,40 @@ body {
         width: 100%;
     }
 }
+.tab_button2 {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+  border: 1px solid #ccc;
+  height: 50px;
+
+}
+
+.space2 {
+  height:50px;
+}
 </style>
 </head>
 <body>
 
 <div class="header">
+  <button
+   id = "buttonwan" class = "tab_button2" onclick="window.open('singup.html', '_self')"> Sign In</button>
+  <button id = "button2" class = "tab_button2" onclick = window.location("finalproject2.html");>Register</button>
+  <div class = "space2"></div>
   <h1>FAM Bot</h1>
   <p>Hey it's the Home Page!</p>
+
 </div>
 <div class="navbar">
-<a href="FAMbot.html">Start</a>
+<a href="finalproject.html">Start</a>
 <a class="active" href="Home.html">Home</a>
-<a href="how to.html">How To</a>
+<a href="howto.html">How To</a>
 <a href="updates.html">Updates</a>
 <a href="code.html" class="right">About the Code</a>
 </div>
@@ -110,7 +132,7 @@ body {
 <div class="row">
   <div class="side">
 <center>
-      <h2>Learn about FAM Bot's functions</h2>
+      <h2>Learn about the FAM Bot's functions</h2>
 
 <body>
   <p>Learn how to utilize our product effecively.</p>
