--- a/howto.html
+++ b/howto.html
@@ -104,6 +104,9 @@ body {
   height: 50px;
 
 }
+.space2 {
+  height:50px;
+}
 </style>
 </head>
 <body>
@@ -112,39 +115,44 @@ body {
   <button
    id = "buttonwan" class = "tab_button2" onclick="window.open('singup.html', '_self')"> Sign In</button>
   <button id = "button2" class = "tab_button2" onclick = window.location("finalproject2.html");>Register</button>
-  <div class = "space2"></div>
+<div class = "space2"></div>
   <h1>FAM Bot</h1>
-  <p>Here's a mess of...words...code.</p>
+  <p>Oh...you've arrived to the How To Page!</p>
 
 </div>
 <div class="navbar">
 <a href="finalproject.html">Start</a>
 <a href="Home.html">Home</a>
-<a href="howto.html">How To</a>
+<a class="active" href="howto.html">How To</a>
 <a href="updates.html">Updates</a>
-<a class="active" href="code.html" class="right">About the Code</a>
+<a href="code.html" class="right">About the Code</a>
 </div>
 
 <div class="row">
   <div class="side">
 <center>
-      <h2>The code used for the robot!</h2>
-      <p> Or at least some of it...so you can see where we started.</p>
-      <img src="https://drive.google.com/uc?id=0B08eSc1YE4oub3JtN3YxazJUbTVwZ0UwdlFSdDJBRkJxa0JV&export=download/"; width=400px; height=570px;></img>
-      <p>The code above was used to create the alarm for emergencies.</p>
-      <img src="https://drive.google.com/uc?id=0B08eSc1YE4ouancxSk1SZFRGQ2FLQXhRdmlhbzlfaDVPeHJn&export=download/"; width=400px; height=570px;></img>
-      <p>The code shown above was a merging of both the code for sound and the morse code alarm.</p>
+      <h2>Learn how to use the FAM Bot</h2>
+      <center>
+      <img src="https://cdn.dribbble.com/users/740188/screenshots/3286126/robot-v2-dribbble.gif"; width=230px; height=190px;></img>
       <div>
-      <p>We combined them to work together.</p>
-      <h2>The code used for our website! An overview.</h2>
-      <img src="https://drive.google.com/uc?id=1JDx7wZretca68hBOixIGWP_MejydUV-K&export=download/"; width=450px; height=210px;></img>
-      <img src="https://drive.google.com/uc?id=1I8bqpriIwLvBmHy7kT4uEUYTOhquyJTp&export=download/"; width=450px; height=210px;></img>
-      <p>Random snippets of code from various parts of the website.</p>
-      <img src="https://drive.google.com/uc?id=1I53XYd9d6Ohe6uNMb7oELnL_cgkOhFQe&export=download/"; width=450px; height=210px;></img>
-
+      <p>Here's a step-by-step how to on using the FAM Bot.</p>
+      <p>We explain how to use FAM Bot and it's uses in our presentation. Here are some images.</p>
       <div>
-      <p>
-
+      <img src="https://drive.google.com/uc?id=16GvpC4qlAJdWfT69Asu093pPFX4hqcRQ&export=download/"; width=450px; height=280px;></img>
+      <div>
+      <p>Our product is meant to help those in need when it is difficult for others to help and rescue survivers.</p>
+      <img src="https://lh4.googleusercontent.com/XJ8PL2ulPQJULxX-foXJ3isOuEOe9XsnaJbz8kn_zvIbJrsSubpeLvXxHnMbnVPWOEpSzpyqYczGO5819haBQCMMs3H4mdx8cHR9K0tb"; width=600px; height=210px;></img>
+      <div>
+      <p>Quite simply all you need to do is power on FAM Bot. The code will already be installed onto the robot.</p>
+      <p>If any errors occur send our product back with an email and proof of purchase. We will gladly fix any issues.</p>
+      <p>To access the website, an enclosed falsh drive/domain will be included in your package.</p>
+      <p>In the future when our database has been installed you will be able to sign in and directly email our team.</p>
+      <p>As well as view the camera and see through the eyes of FAM Bot!</p>
+      <br>
+      <p>Our little FAM Bot will be the future of tech!</p>
+    </center>
+</center>
+<p>
 <body>
 </center>
   </div>
