--- a/updates.html
+++ b/updates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>FAM bot.com</title>
+<title>FAM Bot.com</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -91,18 +91,40 @@ body {
         width: 100%;
     }
 }
+.tab_button2 {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+  border: 1px solid #ccc;
+  height: 50px;
+
+}
+
+.space2{
+  height:50px;
+}
 </style>
 </head>
 <body>
 
 <div class="header">
+  <button
+   id = "buttonwan" class = "tab_button2" onclick="window.open('singup.html', '_self')"> Sign In</button>
+  <button id = "button2" class = "tab_button2" onclick = window.location("finalproject2.html");>Register</button>
+<div class = "space2"></div>
   <h1>FAM Bot</h1>
-  <p>Updates!Updates!</p>
+  <p>Updates! Updates!</p>
+
 </div>
 <div class="navbar">
-<a href="FAMbot.html">Start</a>
+<a href="finalproject.html">Start</a>
 <a href="Home.html">Home</a>
-<a href="how to.html">How To</a>
+<a href="howto.html">How To</a>
 <a class="active" href="updates.html">Updates</a>
 <a href="code.html" class="right">About the Code</a>
 </div>
@@ -112,10 +134,31 @@ body {
 <center>
       <h2>The newest deets!</h2>
 <p>Generating info...</p>
-<img src="https://cdn1.vectorstock.com/i/1000x1000/09/40/cute-robot-vector-250940.jpg"; width=200px; height=200px;></img>
+<img src="https://drive.google.com/uc?id=10g0bTBzHFrJTGaCzNH2L6Nd-gtk4uZ31&export=download"; width=200px; height=200px;></img>
+<p>Extra! Extra! Read all about it, new additions are coming!</p>
 <div>
+<p>Soon we will be adding 1 new feature to FAM Bot! As well as 1 new feature for our website!</p>
+<div>
+<p>1. Detect - senses people based off thermal energy using infrared.</p>
+<div>
+<p>2. Database - sign in and login buttons for registered users to connect and store information as they please.</p>
+<br>
 <p>Phase 2 of the project! Planning the robot!</p>
 <img src="https://img00.deviantart.net/f4dd/i/2015/259/f/c/cute_robot_concept_by_xerohaggard-d99seun.jpg"; width=450px; height=210px;></img>
+<p>Here is an insider on how we started this entire process.</p>
+<img src="https://drive.google.com/uc?id=0B08eSc1YE4oucFhaT1JjTFc5NnVDZTRNS2NWVFpoWGpvczRj&export=download/"; width=450px; height=210px;></img>
+<p>First we planned positioning of wires, resistors, pin heads, sensors, and the speaker. We decided to make a sketch.
+  <div>
+<img src="https://drive.google.com/uc?id=0B08eSc1YE4ouUTB5dlVhNFhfQlRGRU5yRUFfaGxvWG13OUFF&export=download/"; width=410px; height=240px;></img>
+<br>
+<p>We then planned out how to present our product. We managed to finish our slides within a day!</p>
+<img src="https://drive.google.com/uc?id=0B08eSc1YE4ouM3RjNEFBTThUYWQ4ZFIwdVZGUTJGLXhNVEpR&export=download/"; width=410px; height=225px;></img>
+<div>
+  <img src="https://drive.google.com/uc?id=0B08eSc1YE4ouWEpGLVNEX3dqdGRiR3NWZzNSMHE3Z3VmZEVR&export=download/"; width=410px; height=235px;></img>
+
+  <p>We're ready to go! Bring it on!</p>
+<img src="https://media.giphy.com/media/ZktYcjg6LkFOM/giphy.gif"; width=450px; height=240px;></img>
+<div>
 
 <body>
 </center>
