--- a/finalproject2.html
+++ b/finalproject2.html
@@ -15,7 +15,7 @@ main {
   height:500px;
 }
 header,footer {
-  background-color:#d64059;
+  background-color:#f55e61;
   height: 50px;
 }
 .tab {
@@ -60,10 +60,10 @@ textarea {
 
 }
 body {
-  background-color: #d64059;
+  background-color: #f55e61;
 }
 .space1{
-  background-color: #d64059;
+  background-color: #f55e61;
   height:100px;
 }
 .psswd {
