--- a/howto.html
+++ b/howto.html
@@ -107,7 +107,13 @@ body {
 .space2 {
   height:50px;
 }
+
+#animate {
+  display:none;
+}
 </style>
+<script src = "jquery-3.3.1.js"></script>
+<script src = "finalproject.js" ></script>
 </head>
 <body>
 
@@ -116,9 +122,10 @@ body {
    id = "buttonwan" class = "tab_button2" onclick="window.open('singup.html', '_self')"> Sign In</button>
   <button id = "button2" class = "tab_button2" onclick = window.location("finalproject2.html");>Register</button>
 <div class = "space2"></div>
+<div id = "animate">
   <h1>FAM Bot</h1>
   <p>Oh...you've arrived to the How To Page!</p>
-
+</div>
 </div>
 <div class="navbar">
 <a href="finalproject.html">Start</a>
@@ -141,7 +148,7 @@ body {
       <img src="https://drive.google.com/uc?id=16GvpC4qlAJdWfT69Asu093pPFX4hqcRQ&export=download/"; width=450px; height=280px;></img>
       <div>
       <p>Our product is meant to help those in need when it is difficult for others to help and rescue survivers.</p>
-      <img src="https://lh4.googleusercontent.com/XJ8PL2ulPQJULxX-foXJ3isOuEOe9XsnaJbz8kn_zvIbJrsSubpeLvXxHnMbnVPWOEpSzpyqYczGO5819haBQCMMs3H4mdx8cHR9K0tb"; width=600px; height=210px;></img>
+
       <div>
       <p>Quite simply all you need to do is power on FAM Bot. The code will already be installed onto the robot.</p>
       <p>If any errors occur send our product back with an email and proof of purchase. We will gladly fix any issues.</p>
