--- a/singup.html
+++ b/singup.html
@@ -57,6 +57,7 @@ Password: <input name = "psswd" type = "password"></input>
 <div class = "space"></div>
 <button class = "tab_button" onclick = window.location("finalproject.html");>Submit</button>
 </form>
+<button class = "tab_button" onclick = window.location("finalproject.html");> Go Back to Home</button>
 
 </main>
 <footer></footer>
