--- a/updates.html
+++ b/updates.html
@@ -108,7 +108,13 @@ body {
 .space2{
   height:50px;
 }
+#animate{
+  display:none;
+}
 </style>
+<script src = "jquery-3.3.1.js"></script>
+<script src = "finalproject.js" ></script>
+
 </head>
 <body>
 
@@ -117,8 +123,10 @@ body {
    id = "buttonwan" class = "tab_button2" onclick="window.open('singup.html', '_self')"> Sign In</button>
   <button id = "button2" class = "tab_button2" onclick = window.location("finalproject2.html");>Register</button>
 <div class = "space2"></div>
+<div id = "animate" >
   <h1>FAM Bot</h1>
   <p>Updates! Updates!</p>
+</div>
 
 </div>
 <div class="navbar">
