--- a/code.html
+++ b/code.html
@@ -104,7 +104,16 @@ body {
   height: 50px;
 
 }
+.space2 {
+  height:50px;
+}
+#animate {
+  display:none;
+}
+
 </style>
+<script src = "jquery-3.3.1.js"></script>
+<script src = "finalproject.js" ></script>
 </head>
 <body>
 
@@ -113,16 +122,17 @@ body {
    id = "buttonwan" class = "tab_button2" onclick="window.open('singup.html', '_self')"> Sign In</button>
   <button id = "button2" class = "tab_button2" onclick = window.location("finalproject2.html");>Register</button>
   <div class = "space2"></div>
+  <div id = "display">
   <h1>FAM Bot</h1>
   <p>Here's a mess of...words...code.</p>
-
+</div>
 </div>
 <div class="navbar">
 <a href="finalproject.html">Start</a>
 <a href="Home.html">Home</a>
 <a href="howto.html">How To</a>
 <a href="updates.html">Updates</a>
-<a class="active" href="code.html" class="right">About the Code</a>
+<a href="code.html" class="right">About the Code</a>
 </div>
 
 <div class="row">
